SFDCPrj/force-app/main/default/objects/Leave__c/fields/Leave_balance__c.field-meta.xml
<CustomField>
    <fullName>Leave_balance__c</fullName>
    <label>Leave balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>