SFDCPrj/force-app/main/default/objects/Leave__c/fields/Leave_Name__c.field-meta.xml
<CustomField>
    <fullName>Leave_Name__c</fullName>
    <label>Leave Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>