SFDCPrj/force-app/main/default/objects/Leave__c/fields/Levav_Balance_F__c.field-meta.xml
<CustomField>
    <fullName>Levav_Balance_F__c</fullName>
    <formula>Submitted_By__r.Leave__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Levav Balance F</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>