SFDCPrj/force-app/main/default/objects/Leave__c/validationRules/Approved_Leaves_which_are_past_date_cann.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Leaves_which_are_past_date_cann</fullName>
    <active>true</active>
    <description>Approved Leaves which are past date cannot be updated/deleted</description>
    <errorConditionFormula>ISPICKVAL( Status__c , &apos;Approved&apos;)   &amp;&amp;  End_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorMessage>You cannot modify past approved leave</errorMessage>
</ValidationRule>