SFDCPrj/force-app/main/default/objects/Leave__c/validationRules/Leave_Balance_is_less.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Balance_is_less</fullName>
    <active>true</active>
    <errorConditionFormula>No_of_Days_Leave_Applied__c &gt; Submitted_By__r.Available_Leave__c</errorConditionFormula>
    <errorMessage>You do not have sufficient Leave Balance</errorMessage>
</ValidationRule>