SFDCPrj/force-app/main/default/objects/Leave__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>End_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Comments__c</columns>
    <columns>Submitted_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>